fix(frontend): Add box shadow to widget in collapsed state

--- a/frontend/src/features/widget/widget-toggle-button.scss
+++ b/frontend/src/features/widget/widget-toggle-button.scss
@@ -24,5 +24,6 @@
     border-radius: $widget-border-radius $widget-border-radius 0 0;
     height: 45px;
     line-height: 45px;
+    width: 100%;
   }
 }
